--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -4,24 +4,36 @@ body {
 }
 
 .card {
-  width: 400px;
+  width: 500px;
   background: #fff;
   margin: 16px auto;
+  padding: 4px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
+  padding: 8px;
+  margin: 8px
 }
 
 .content {
   background: #e3f4ff;
+  padding: 20px;
+  margin: 16px 8px 16px;
 }
 
 .button-container {
   background: #e3f4ff;
+  text-align: center;
+  padding: 8px;
+  margin: 8px;
+
 }
 
 button {
+  display: block;
   background: white;
-  border: 1px solid #eee;
+  padding: 8px 24px 8px;
+  margin: auto;
 }
